--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "pinia": "^2.0.12",
+    "primeicons": "^5.0.0",
+    "primevue": "^3.12.2",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
