--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "pinia": "^2.0.12",
+    "primeflex": "^3.1.3",
     "primeicons": "^5.0.0",
     "primevue": "^3.12.2",
     "vue": "^3.2.25",
@@ -19,6 +20,7 @@
     "@types/node": "^17.0.21",
     "@vitejs/plugin-vue": "^2.2.0",
     "eslint": "^8.11.0",
+    "sass": "^1.49.9",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
     "vue-tsc": "^0.29.8"
