--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -4,12 +4,14 @@
     "useDefineForClassFields": true,
     "module": "esnext",
     "moduleResolution": "node",
+    "isolatedModules": true,
     "strict": true,
     "jsx": "preserve",
     "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
+    "skipLibCheck": true,
     "paths": {
       "@/*": ["./src"],
       "@components/*": ["./src/components"],
