--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "pinia": "^2.0.12",
     "primeflex": "^3.1.3",
     "primeicons": "^5.0.0",
