feat(api/auth): Started to implement auth api integration; Added monads, runtypes, axios

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -12,10 +12,12 @@
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
     "skipLibCheck": true,
+    "baseUrl": "./src",
     "paths": {
-      "@/*": ["./src"],
-      "@components/*": ["./src/components"],
-      "@views/*": ["./src/views"]
+      "@/*": ["./*"],
+      "@components/*": ["components/*"],
+      "@views/*": ["views/*"],
+      "@api/*": ["api/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
