--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sweet-monads/either": "^2.3.1",
+    "axios": "^0.26.1",
     "pinia": "^2.0.12",
     "primeflex": "^3.1.3",
     "primeicons": "^5.0.0",
     "primevue": "^3.12.2",
+    "runtypes": "^6.5.1",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
