--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@sweet-monads/either": "^2.3.1",
+    "@vueuse/core": "^8.5.0",
     "axios": "^0.26.1",
     "pinia": "^2.0.12",
     "primeflex": "^3.1.3",
