--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -6,24 +6,25 @@ services:
     volumes:
       - ./data/db:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "5433:5432"
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/code
     ports:
       - "8000:8000"
     depends_on:
       - db
+      - redis
   redis:
     image: redis:alpine
   celery:
-    restart: always
+    #restart: always
     build:
       context: .
     command: celery -A finance beat
