--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@sweet-monads/either": "^2.3.1",
     "@vueuse/core": "^8.5.0",
     "axios": "^0.26.1",
+    "chart.js": "^3.8.0",
     "pinia": "^2.0.12",
     "primeflex": "^3.1.3",
     "primeicons": "^5.0.0",
@@ -18,6 +19,7 @@
     "runtypes": "^6.5.1",
     "vee-validate": "^4.5.11",
     "vue": "^3.2.25",
+    "vue-chartjs": "^4.1.0",
     "vue-material-design-icons": "^5.0.0",
     "vue-router": "^4.0.14",
     "yup": "^0.32.11"
