--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@vueuse/core": "^8.5.0",
     "axios": "^0.26.1",
     "chart.js": "^3.8.0",
+    "date-fns": "^2.28.0",
     "pinia": "^2.0.12",
     "primeflex": "^3.1.3",
     "primeicons": "^5.0.0",
